Simplify and align querybyexample to query endpoint
