# ferelight/models/__init__.py
@@ -4,7 +4,7 @@ from ferelight.models.multimediaobject import Multimediaobject
 from ferelight.models.multimediasegment import Multimediasegment
 from ferelight.models.objectinfos_post_request import ObjectinfosPostRequest
 from ferelight.models.query_post_request import QueryPostRequest
-from ferelight.models.querybyexample_database_post_request import QuerybyexampleDatabasePostRequest
+from ferelight.models.querybyexample_post_request import QuerybyexamplePostRequest
 from ferelight.models.scoredsegment import Scoredsegment
 from ferelight.models.segmentbytime_database_post200_response import SegmentbytimeDatabasePost200Response
 from ferelight.models.segmentbytime_database_post_request import SegmentbytimeDatabasePostRequest
